--- a/config/database.yml
+++ b/config/database.yml
@@ -27,6 +27,7 @@ development:
 test:
   <<: *default
   database: info_test_test
+  port: <%= ENV['MYSQL_PORT'] %>
 
 # As with config/secrets.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
