--- a/config/database.yml
+++ b/config/database.yml
@@ -27,7 +27,8 @@ development:
 test:
   <<: *default
   database: info_test_test
-  port: <%= ENV['MYSQL_PORT'] %>
+  host: <%= ENV['MYSQL_PORT_3306_TCP_ADDR'] %>
+  port: <%= ENV['MYSQL_PORT_3306_TCP_PORT']%>
 
 # As with config/secrets.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
