--- a/wercker.yml
+++ b/wercker.yml
@@ -13,7 +13,7 @@ services:
       env:
         MYSQL_ROOT_USERNAME: root
         MYSQL_ALLOW_EMPTY_PASSWORD: true 
-        MYSQL_DATABASE: info_test_development
+        MYSQL_DATABASE: info_test_test
     # - mongo
     # http://devcenter.wercker.com/docs/services/mongodb.html
 
