--- a/config/database.yml
+++ b/config/database.yml
@@ -29,6 +29,8 @@ test:
   database: info_test_test
   host: <%= ENV['MYSQL_PORT_3306_TCP_ADDR'] %>
   port: <%= ENV['MYSQL_PORT_3306_TCP_PORT']%>
+  username: root
+  password:
 
 # As with config/secrets.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
